--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "ejs": "^3.1.7",
     "express": "^4.17.3",
+    "mongoose": "^6.3.2",
     "nodemon": "^2.0.15"
   },
   "devDependencies": {
